<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_message">Welcome To  ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
    <string name="profile">MY  PROFILE</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Nigeria</string>
    <string name="email">Email: techflexco2018@gmail.com</string>
    <string name="phone">Phone Number: 08025774336</string>
    <string name="slack_id">Slack Username: @Dennis Samuel</string>
    <string name="name">Dennis Samuel</string>
</resources>
