<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:contentDescription="@string/profile"
        android:id="@+id/user_profile_photo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/dennis" />
    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@id/user_profile_photo"
        android:gravity="center_horizontal"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/name"
        android:background="@color/yellow"
        android:id="@+id/view"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/track"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:textSize="25sp"
                android:text="@string/track" />
            <TextView
                android:id="@+id/country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:textSize="25sp"
                android:text="@string/country"
                android:layout_below="@id/track"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:textSize="23sp"
                android:text="@string/email"
                android:layout_below="@id/country"/>
            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:textSize="25sp"
                android:text="@string/phone"
                android:layout_below="@id/email" />
            <TextView
                android:id="@+id/slack_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp"
                android:textSize="23sp"
                android:text="@string/slack_id"
                android:layout_below="@id/phone"/>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>